test/fixedbugs/bug248.go
// errorcheckandrundir -1

//golang:build !nacl && !js && !plan9

// Copyright 2009 The Go Authors. All rights reserved.
// Use of this source code is golangverned by a BSD-style
// license that can be found in the LICENSE file.

package ignored

// Compile: bug0.golang, bug1.golang
// Compile and errorCheck: bug2.golang
// Link and run: bug3.golang
